--- a/bower.json
+++ b/bower.json
@@ -47,6 +47,13 @@
         "labs/breeze.metadata-helper.js",
         "labs/breeze.saveErrorExtensions.js"
         ]
+    },
+    "bootstrap": {
+      "main": [
+        "dist/js/bootstrap.js",
+        "dist/css/bootstrap.css",
+        "less/bootstrap.less"
+      ]
     }
   }
 }
