--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "kerberos": "0.0.17",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.6",
+    "mongoose-type-email": "^1.0.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
     "node-sass": "^3.4.2",
