--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "extras.angular.plus": "^0.9.0",
     "angular-ui-bootstrap-bower": "~0.11.0",
     "angular-google-maps": "^2.3.2",
-    "angular-simple-logger": "^0.1.7"
+    "angular-simple-logger": "^0.1.7",
+    "angular-ivh-treeview": "^1.0.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.9",
