--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.14.2",
+    "bson": "^0.4.23",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
@@ -24,6 +25,7 @@
     "kerberos": "0.0.17",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.6",
+    "mongoose-path-tree": "^1.3.5",
     "mongoose-type-email": "^1.0.2",
     "morgan": "^1.6.1",
     "multer": "^1.1.0",
