--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "kerberos": "0.0.17",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.6",
+    "mongoose-materialized-path": "^1.3.5",
     "mongoose-path-tree": "^1.3.5",
     "mongoose-type-email": "^1.0.2",
     "morgan": "^1.6.1",
