--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-ui-bootstrap-bower": "~0.11.0",
     "angular-google-maps": "^2.3.2",
     "angular-simple-logger": "^0.1.7",
-    "angular-ivh-treeview": "^1.0.3"
+    "angular-ivh-treeview": "^1.0.3",
+    "ng-file-upload": "^12.0.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.9",
