--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
   "dependencies": {
     "body-parser": "^1.14.2",
     "bson": "^0.4.23",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.1",
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "express-sessions": "^1.0.5",
+    "gcloud": "^0.32.0",
     "jade": "^1.11.0",
     "kerberos": "0.0.17",
+    "mime": "^1.3.4",
     "mongodb": "^2.1.4",
     "mongoose": "^4.3.6",
     "mongoose-materialized-path": "^1.3.5",
