--- a/bower.json
+++ b/bower.json
@@ -31,7 +31,8 @@
     "angular-google-maps": "^2.3.2",
     "angular-simple-logger": "^0.1.7",
     "angular-ivh-treeview": "^1.0.3",
-    "ng-file-upload": "^12.0.4"
+    "ng-file-upload": "^12.0.4",
+    "angular-file-upload": "^2.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.9",
