--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,8 @@
     "angular-ui-router": "^0.2.18",
     "components-font-awesome": "^4.6.1",
     "animatewithsass": "^3.2.2",
-    "angular-slick": "^0.2.1"
+    "angular-slick": "^0.2.1",
+    "ngGeolocation": "^0.0.8"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.9",
