SQ-19 #in-progress display nearby location in the front page

--- a/.jscsrc
+++ b/.jscsrc
@@ -11,7 +11,7 @@
     "catch"
   ],
   "requireOperatorBeforeLineBreak": true,
-  "requireCamelCaseOrUpperCaseIdentifiers": true,
+  "requireCamelCaseOrUpperCaseIdentifiers": {"ignoreProperties": true, "strict": true}
   "maximumLineLength": {
     "value": 200,
     "allowComments": true,
