--- a/bower.json
+++ b/bower.json
@@ -42,7 +42,8 @@
     "components-font-awesome": "^4.6.1",
     "animatewithsass": "^3.2.2",
     "angular-slick": "^0.2.1",
-    "ngGeolocation": "^0.0.8"
+    "ngGeolocation": "^0.0.8",
+    "angular-wizard": "^0.6.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.9",
